--- a/stationGet.ipynb
+++ b/stationGet.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
     "    time.sleep(1)\n",
     "    stations = soup2.find('div',attrs={\"class\":\"mw-parser-output\"}).find_all('li')\n",
     "    for station in stations:\n",
-    "        if \"駅\" in station.text or \"停留所\" in station.text:\n",
+    "        if \"駅\" in station.text or \"停留場\" in station.text:\n",
     "            stationList.append(station.text)\n",
     "\n",
     "stationName = \"\\n\".join(stationList)\n",
@@ -144,6 +144,728 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#廃駅情報取得"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from bs4 import BeautifulSoup\n",
+    "import pandas as pd\n",
+    "import requests\n",
+    "\n",
+    "url = \"https://enpedia.rxy.jp/wiki/%E5%BB%83%E9%A7%85%E3%81%AE%E4%B8%80%E8%A6%A7\"\n",
+    "res = requests.get(url)\n",
+    "soup = BeautifulSoup(res.content, \"html.parser\")\n",
+    "\n",
+    "closeStation = []\n",
+    "\n",
+    "#現存路線内廃駅情報取得\n",
+    "contents = soup.find_all(\"div\", attrs={\"class\":\"NavContent\"})\n",
+    "for j in range(7):\n",
+    "    for i in range(1,len(contents[j])):\n",
+    "        sta_name = contents[j].find_all(\"tr\")[i].find_all(\"td\")[0].text.replace(\"\\n\",\"\")\n",
+    "        sta_yomi = contents[j].find_all(\"tr\")[i].find_all(\"td\")[1].text.replace(\"\\n\",\"\")\n",
+    "        closeStation.append([sta_name,sta_yomi])\n",
+    "\n",
+    "#休業中（実質廃駅）取得\n",
+    "for content in contents[7].find_all(\"li\"):\n",
+    "    content = content.text\n",
+    "    sta_name = content[:content.find(\"（\")]\n",
+    "    sta_yomi = content[content.find(\"（\")+1:content.find(\"、\")]\n",
+    "    closeStation.append([sta_name,sta_yomi])\n",
+    "\n",
+    "#路線ごと廃線の情報取得\n",
+    "for n in range(8,len(contents)):\n",
+    "    for content in contents[n].find_all(\"li\"):\n",
+    "        content = content.text\n",
+    "        sta_name = content[:content.find(\"（\")]\n",
+    "        sta_yomi = content[content.find(\"（\")+1:content.find(\"・\")]\n",
+    "        closeStation.append([sta_name,sta_yomi])\n",
+    "\n",
+    "df = pd.DataFrame(closeStation)\n",
+    "df.to_csv(\"close_station.csv\",index=False,header=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from bs4 import BeautifulSoup\n",
+    "import requests\n",
+    "import time"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "url = \"https://enpedia.rxy.jp/wiki/%E5%BB%83%E9%A7%85%E3%81%AE%E4%B8%80%E8%A6%A7\"\n",
+    "res = requests.get(url)\n",
+    "soup = BeautifulSoup(res.content, \"html.parser\")\n",
+    "soup"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "旭浜駅 あさひはまえき\n"
+     ]
+    }
+   ],
+   "source": [
+    "contents = soup.find_all(\"div\", attrs={\"class\":\"NavContent\"})\n",
+    "sta_name = contents[0].find_all(\"tr\")[1].find_all(\"td\")[0].text.replace(\"\\n\",\"\")\n",
+    "sta_yomi = contents[0].find_all(\"tr\")[1].find_all(\"td\")[1].text.replace(\"\\n\",\"\")\n",
+    "print(sta_name,sta_yomi)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "16"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(contents)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'きくすいやまえき'"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "content = contents[7].find_all(\"li\")[1].text\n",
+    "content[:content.find(\"（\")]\n",
+    "content[content.find(\"（\")+1:content.find(\"、\")]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "猪苗代湖畔駅 いなわしろこはんえき\n",
+      "菊水山駅 きくすいやまえき\n",
+      "堂平駅 どうだいらえき\n",
+      "水根駅 みずねえき\n"
+     ]
+    }
+   ],
+   "source": [
+    "for content in contents[7].find_all(\"li\"):\n",
+    "    content = content.text\n",
+    "    sta_name = content[:content.find(\"（\")]\n",
+    "    sta_yomi = content[content.find(\"（\")+1:content.find(\"、\")]\n",
+    "    print(sta_name,sta_yomi)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'愛冠駅（あいかっぷえき・北海道ちほく高原鉄道ふるさと銀河線）'"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "contents[8].find_all(\"li\")[0].text"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "愛冠駅 あいかっぷえき\n",
+      "愛国駅 あいこくえき\n",
+      "明石町駅 あかしちょうえき\n",
+      "阿寒駅 あかんえき\n",
+      "浅茅野駅 あさじのえき\n",
+      "旭駅 あさひえき\n",
+      "朝日駅 あさひえき\n",
+      "旭岡駅 あさひおかえき\n",
+      "旭ヶ丘駅 あさひがおかえき\n",
+      "旭通仮乗降場 あさひどおりかりじょうこうじょう\n",
+      "旭町駅 あさひまちえき\n",
+      "芦野駅 あしのえき\n",
+      "足寄駅 あしょろえき\n",
+      "阿分駅 あふんえき\n",
+      "以久科駅 いくしなえき\n",
+      "幾春別駅 いくしゅんべつえき\n",
+      "石狩追分駅 いしかりおいわけえき\n",
+      "石狩橋本駅 いしかりはしもとえき\n",
+      "石坂駅 いしざかえき\n",
+      "泉川駅 いずみかわえき\n",
+      "一ノ橋駅 いちのはしえき\n",
+      "一本松駅 いっぽんまつえき\n",
+      "一本松駅 いっぽんまつえき\n",
+      "渭ノ津駅 いのつえき\n",
+      "今金駅 いまがねえき\n",
+      "入鹿別駅 いるかさわえき\n",
+      "色内仮乗降場 いろないかりじょうこうじょう\n",
+      "岩知志駅 いわちしえき\n",
+      "岩内駅 いわないえき\n",
+      "宇遠内駅 うえんないえき\n",
+      "雨煙別駅 うえんべつえき\n",
+      "上平駅 うえひらえき\n",
+      "臼谷駅 うすやえき\n",
+      "鶉駅 うずらえき\n",
+      "歌越駅 うたこしえき\n",
+      "歌志内駅 うたしないえき\n",
+      "宇津駅 うつえき\n",
+      "宇津内仮乗降場 うつないかりじょうこうじょう\n",
+      "卯原内駅 うばらないえき\n",
+      "宇摩駅 うまえき\n",
+      "瓜幕駅 うりまくえき\n",
+      "雨竜駅 うりゅうえき\n",
+      "営林署前駅 えいりんしょまええき\n",
+      "江差駅 えさしえき\n",
+      "遠別駅 えんべつえき\n",
+      "遠幌駅 えんほろえき\n",
+      "大椴駅 おおとどえき\n",
+      "大野新道停留場 おおのしんどうていりゅうじょう\n",
+      "大曲仮乗降場 おおまがりかりじょうこうじょう\n",
+      "大曲仮乗降場 おおまがりかりじょうこうじょう\n",
+      "大森駅 おおもりえき\n",
+      "大谷地駅 おおやちえき\n",
+      "大夕張駅 おおゆうばりえき\n",
+      "大夕張炭山駅 おおゆうばりたんざんえき\n",
+      "岡女堂駅 おかめどうえき\n",
+      "興津仮乗降場 おこつかりじょうこうじょう\n",
+      "奥東仮乗降場 おくひがしかりじょうこうじょう\n",
+      "奥行臼駅 おくゆきうすえき\n",
+      "置戸駅 おけとえき\n",
+      "興部駅 おこっぺえき\n",
+      "渡島吉岡駅 おしまよしおかえき\n",
+      "渡島大沢駅 おしまおおさわえき\n",
+      "渡島知内駅 おしましりうちえき\n",
+      "渡島鶴岡駅 おしまつるおかえき\n",
+      "渡島福島駅 おしまふくしまえき\n",
+      "音更駅 おとふけえき\n",
+      "鬼鹿駅 おにしかえき\n",
+      "鬼志別駅 おにしべつえき\n",
+      "小平駅 おびらえき\n",
+      "雄武駅 おむえき\n",
+      "雄武共栄仮乗降場 おむきょうえいかりじょうこうじょう\n",
+      "大誉地駅 およちえき\n",
+      "及部駅 およべえき\n",
+      "重内駅 おもないえき\n",
+      "恩根駅 おんねえき\n",
+      "開栄駅 かいえいえき\n",
+      "海岸町停留場 かいがんちょうていりゅうじょう\n",
+      "開盛駅 かいせいえき\n",
+      "開拓仮乗降場 かいたくかりじょうこうじょう\n",
+      "楓駅 かえでえき\n",
+      "角田駅 かくたえき\n",
+      "歌神駅 かしんえき\n",
+      "春日駅 かすがえき\n",
+      "ガス会社前停留場 がすがいしゃまえていりゅうじょう\n",
+      "活汲駅 かっくみえき\n",
+      "桂岡駅 かつらおかえき\n",
+      "樺岡駅 かばおかえき\n",
+      "上厚真駅 かみあつまえき\n",
+      "上音威子府駅 かみおといねっぷえき\n",
+      "上江別駅 かみえべつえき\n",
+      "神丘駅 かみおかえき\n",
+      "上興部駅 かみおこっぺえき\n",
+      "上駒駅 かみこまえき\n",
+      "上更別駅 かみさらべつえき\n",
+      "上志文駅 かみしぶんえき\n",
+      "上士別駅 かみしべつえき\n",
+      "上士幌駅 かみしほろえき\n",
+      "上春別駅 かみしゅんべつえき\n",
+      "上渚滑駅 かみしょこつえき\n",
+      "上白糠駅 かみしらぬかえき\n",
+      "上砂川駅 かみすながわえき\n",
+      "上多度志駅 かみたどしえき\n",
+      "上茶路駅 かみちゃろえき\n",
+      "上常呂駅 かみところえき\n",
+      "上利別駅 かみとしべつえき\n",
+      "上徳富駅 かみとっぷえき\n",
+      "上頓別駅 かみとんべつえき\n",
+      "上長和駅 かみながわえき\n",
+      "上名寄駅 かみなよろえき\n",
+      "上ノ国駅 かみのくにえき\n",
+      "上美幌駅 かみびほろ\n",
+      "上幌加内駅 かみほろかないえき\n",
+      "上武佐駅 かみむさえき\n",
+      "上湧別駅 かみゆうべつえき\n",
+      "神威駅 かもいえき\n",
+      "亀田町停留場 かめだちょうていりゅうじょう\n",
+      "萱野駅 かやのえき\n",
+      "我路駅 がろえき\n",
+      "川上駅 かわかみえき\n",
+      "川北駅 かわきたえき\n",
+      "川西駅 かわにしえき\n",
+      "干拓仮乗降場 かんたくかりじょうこうじょう\n",
+      "寒別駅 かんべつえき\n",
+      "北愛国駅 きたあいこくえき\n",
+      "北遠軽駅 きたえんがるえき\n",
+      "北岡駅 きたおかえき\n",
+      "北上徳富駅 きたかみとっぷえき\n",
+      "北川口駅 きたかわぐちえき\n",
+      "北笹川駅 きたささかわえき\n",
+      "北鈴川駅 きたすずかわえき\n",
+      "北住吉駅 きたすみよしえき\n",
+      "北園駅 きたぞのえき\n",
+      "北長沼駅 きたながぬまえき\n",
+      "北檜山駅 きたひやまえき\n",
+      "北埠頭駅 きたふとうえき\n",
+      "北平和駅 きたへいわえき\n",
+      "北松田駅 きたまつだえき\n",
+      "北見相生駅 きたみあいおいえき\n",
+      "北見枝幸駅 きたみえさしえき\n",
+      "北見共立駅 きたみきょうりつえき\n",
+      "北見滝ノ上駅 きたみたきのうええき\n",
+      "北見富丘駅 きたみとみおかえき\n",
+      "北見平和駅 きたみへいわえき\n",
+      "北母子里駅 きたもしりえき\n",
+      "北湯沢駅 きたゆざわえき\n",
+      "木野駅 きのえき\n",
+      "岐阜橋駅 ぎふはしえき\n",
+      "喜茂別駅 きもべつえき\n",
+      "共栄駅 きょうえいえき\n",
+      "共栄仮乗降場 きょうえいかりじょうこうじょう\n",
+      "京極駅 きょうごくえき\n",
+      "共進駅 きょうしんえき\n",
+      "共成駅 きょうせいえき\n",
+      "協和駅 きょうわえき\n",
+      "屈足駅 くったりえき\n",
+      "国富駅 くにとみえき\n",
+      "久保内駅 くぼないえき\n",
+      "熊牛駅 くまうしえき\n",
+      "黒石平駅 くろいしだいらえき\n",
+      "訓子府駅 くんねっぷえき\n",
+      "薫別駅 くんべつえき\n",
+      "恵北駅 けいほくえき\n",
+      "啓明仮乗降場 けいめいかりじょうこうじょう\n",
+      "計根別駅 けねべつえき\n",
+      "計呂地駅 けろちえき\n",
+      "小石駅 こいしえき\n",
+      "礦業所前駅 こうぎょうしょまええき\n",
+      "高校前仮乗降場 こうこうまえかりじょうこうじょう\n",
+      "光進駅 こうしんえき\n",
+      "興生沢仮乗降場 こうせいざわかりじょうこうじょう\n",
+      "弘道駅 こうどうえき\n",
+      "港南駅 こうなんえき\n",
+      "幸福駅 こうふくえき\n",
+      "港南駅 こうほくえき\n",
+      "声問駅 こえといえき\n",
+      "五鹿山仮乗降場 ごかざんかりじょうこうじょう\n",
+      "五ヶ山駅 ごかやまえき\n",
+      "越川駅 こしかわえき\n",
+      "古潭駅 こたんえき\n",
+      "古丹別駅 こたんべつえき\n",
+      "寿駅 ことぶきえき\n",
+      "湖畔駅 こはんえき\n",
+      "駒場駅 こまばえき\n",
+      "小向駅 こむかいえき\n",
+      "栄駅 さかええき\n",
+      "栄丘駅 さかえおかえき\n",
+      "栄町駅 さかえまちえき\n",
+      "栄町停留場 さかえまちていりゅうじょう\n",
+      "境野駅 さかいのえき\n",
+      "作返仮乗降場 さくかえしかりじょうこうじょう\n",
+      "桜田駅 さくらだえき\n",
+      "笹森駅 ささもりえき\n",
+      "札幌市場駅 さっぽろしじょうえき\n",
+      "佐幌駅 さほろえき\n",
+      "様舞駅 さままいえき\n",
+      "更岸駅 さらきしえき\n",
+      "更別駅 さらべつえき\n",
+      "猿払駅 さるふつえき\n",
+      "沙留駅 さるるえき\n",
+      "佐呂間駅 さろまえき\n",
+      "沢木駅 さわきえき\n",
+      "参郷駅 さんごうえき\n",
+      "三泊駅 さんとまりえき\n",
+      "自衛隊前駅 じえいたいまええき\n",
+      "塩幌駅 しおほろえき\n",
+      "潮見町駅 しおみちょうえき\n",
+      "鹿追駅 しかおいえき\n",
+      "四号線駅 しごうせんえき\n",
+      "静川駅 しずかわえき\n",
+      "志撫子仮乗降場 しぶしかりじょうこうじょう\n",
+      "士幌駅 しほろえき\n",
+      "清水谷駅 しみずたにえき\n",
+      "下鶉駅 しもうずらえき\n",
+      "下川駅 しもかわえき\n",
+      "下越川駅 しもこしかわえき\n",
+      "下渚滑駅 しもしょこつえき\n",
+      "下頓別駅 しもとんべつえき\n",
+      "下の月駅 しものつきえき\n",
+      "下北進駅 しもほくしんえき\n",
+      "下幌成駅 しもほろなりえき\n",
+      "尺別炭山駅 しゃくべつたんざんえき\n",
+      "舎熊駅 しゃぐまえき\n",
+      "社尺別駅 しゃしゃくべつえき\n",
+      "斜内駅 しゃないえき\n",
+      "十六号線仮乗降場 じゅうろくごうせんかりじょうこうじょう\n",
+      "シューパロ湖駅 しゅーぱろこえき\n",
+      "周磨駅 しゅうまろえき\n",
+      "十四号仮乗降場 じゅうよんごうかりじょうこうじょう\n",
+      "十六号仮乗降場 じゅうろくごうかりじょうこうじょう\n",
+      "朱鞠内駅 しゅまりないえき\n",
+      "朱文別駅 しゅもんべつえき\n",
+      "春別駅 しゅんべつえき\n",
+      "上東仮乗降場 じょうとうかりじょうこうじょう\n",
+      "小利別駅 しょうとしべつえき\n",
+      "小頓別駅 しょうとんべつえき\n",
+      "渚滑駅 しょこつえき\n",
+      "初山別駅 しょさんべつえき\n",
+      "白樺駅 しらかばえき\n",
+      "白符駅 しらふえき\n",
+      "新大滝駅 しんおおたきえき\n",
+      "新釧路駅 しんくしろえき\n",
+      "新士幌仮乗降場 しんしほろかりじょうこうじょう\n",
+      "新清水沢駅 しんしみずさわえき\n",
+      "新尺別駅 しんしゃくべつえき\n",
+      "新生駅 しんせいえき\n",
+      "新世橋前駅 しんせいばしまええき\n",
+      "新苫小牧駅 しんとまこまいえき\n",
+      "新富駅 しんとみえき\n",
+      "新成生駅 しんなりうえき\n",
+      "新二岐駅 しんふたまたえき\n",
+      "新幌内駅 しんほろないえき\n",
+      "神明駅 しんめいえき\n",
+      "新弥生駅 しんやよいえき\n",
+      "新雄別駅 しんゆうべつえき\n",
+      "末広駅  すえひろえき\n",
+      "澄川駅 すみかわえき\n",
+      "西武テーオー前停留場 せいぶてーおーまえていりゅうじょう\n",
+      "政和駅 せいわえき\n",
+      "政和温泉駅 せいわおんせんえき\n",
+      "石油埠頭駅 せきゆふとうえき\n",
+      "瀬越駅 せごしえき\n",
+      "瀬棚駅 せたなえき\n",
+      "千軒駅 せんけんえき\n",
+      "仙美里駅 せんびりえき\n",
+      "千松仮乗降場 せんまつかりじょうこうじょう\n",
+      "壮瞥駅 そうべつえき\n",
+      "添牛内駅 そえうしないえき\n",
+      "大樹駅 たいきえき\n",
+      "大正駅 たいしょうえき\n",
+      "大昭仮乗降場 たいしょうかりじょうこうじょう\n",
+      "高島駅 たかしまえき\n",
+      "鷹泊駅 たかどまりえき\n",
+      "滝ノ下駅 たきのしたえき\n",
+      "種川駅 たねかわえき\n",
+      "達美仮乗降場 たつみかりじょうこうじょう\n",
+      "多度志駅 たどしえき\n",
+      "多和駅 たわえき\n",
+      "築別駅 ちくべつえき\n",
+      "千年町駅 ちとせまちえき\n",
+      "茶屋川駅 ちゃやがわえき\n",
+      "茶路駅 ちゃろえき\n",
+      "中央農試前駅 ちゅうおうのうしまえ\n",
+      "忠類駅 ちゅうるいえき\n",
+      "知来駅 ちらいえき\n",
+      "津別駅 つべつえき\n",
+      "月寒駅 つきさっぷえき\n",
+      "継立駅 つぎたてえき\n",
+      "鶴野駅 つるのえき\n",
+      "天塩駅 てしおえき\n",
+      "天塩有明駅 てしおありあけえき\n",
+      "天塩大沢駅 てしおおおさわえき\n",
+      "天塩金浦駅 てしおかなうらえき\n",
+      "天塩栄駅 てしおさかええき\n",
+      "天塩弥生駅 てしおやよいえき\n",
+      "鉄道工場前停留場 てつどうこうじょうまえていりゅうじょう\n",
+      "手宮駅 てみやえき\n",
+      "電力所前仮乗降場 でんりょくしょまえかりじょうこうじょう\n",
+      "問牧駅 といまきえき\n",
+      "当幌駅 とうほろえき\n",
+      "唐松駅 とうまつえき\n",
+      "東明駅 とうめいえき\n",
+      "十勝東和駅 とかちとうわえき\n",
+      "十勝三股駅 とかちみつまたえき\n",
+      "常盤駅 ときわえき\n",
+      "常盤台駅 ときわだいえき\n",
+      "床丹駅 とこたんえき\n",
+      "常呂駅 ところえき\n",
+      "常呂港仮乗降場 ところこうかりじょうこうじょう\n",
+      "土佐仮乗降場 とさかりじょうこうじょう\n",
+      "苫前駅 とままええき\n",
+      "富丘駅 とみおかえき\n",
+      "富岡仮乗降場 とみおかかりじょうこうじょう\n",
+      "豊泉駅 とよいずみえき\n",
+      "豊牛駅 とようしえき\n",
+      "豊岬駅 とよさきえき\n",
+      "豊城駅 とよしろえき\n",
+      "豊住駅 とよずみえき\n",
+      "豊田駅 とよたえき\n",
+      "豊野駅 とよのえき\n",
+      "豊似駅 とよにえき\n",
+      "豊浜仮乗降場 とよはまかりじょうこうじょう\n",
+      "豊平駅 とよひらえき\n",
+      "豊幌仮乗降場  とよほろかりじょうこうじょう\n",
+      "頓別仮乗降場 とんべつかりじょうこうしょ\n",
+      "中瓜幕駅 なかうりまくえき\n",
+      "中雨竜仮乗降場 なかうりゅうかりじょうこうじょう\n",
+      "中興部駅 なかおこっぺえき\n",
+      "中音更駅 なかおとふけえき\n",
+      "中川口仮乗降場 なかかわぐちかりじょうこうじょう\n",
+      "中札内駅 なかさつないえき\n",
+      "中鹿追駅 なかしかおいえき\n",
+      "中標津駅 なかしべつえき\n",
+      "中士幌駅 なかしほろえき\n",
+      "中渚滑駅 なかしょこつえき\n",
+      "中須田駅 なかすだえき\n",
+      "中園駅 なかぞのえき\n",
+      "中頓別駅 なかとんべつえき\n",
+      "中名寄駅 なかなよろえき\n",
+      "中ノ岱駅 なかのたいえき\n",
+      "中能取仮乗降場 なかのとろかりじょうこうじょう\n",
+      "中湧別駅 なかゆうべつえき\n",
+      "南幌駅 なんぽろえき\n",
+      "仁宇布駅 にうぷえき\n",
+      "新内駅 にいないえき\n",
+      "仁倉駅 にくらえき\n",
+      "濁川駅 にごりかわえき\n",
+      "西一線駅 にしいっせんえき\n",
+      "西歌駅 にしうたえき\n",
+      "西興部駅 にしおこっぺえき\n",
+      "錦沢駅 にしきざわえき\n",
+      "西訓子府駅 にしくんねっぷえき\n",
+      "西港駅 にしこうえき\n",
+      "西春別駅 にししゅんべつえき\n",
+      "西富駅 にしとみえき\n",
+      "西名寄駅 にしなよろえき\n",
+      "西二線仮乗降場 にしにせんかりじょうこうじょう\n",
+      "西前田駅 にしまえだえき\n",
+      "仁世宇駅 にせうえき\n",
+      "二ノ橋駅 にのはしえき\n",
+      "丹羽駅 にわえき\n",
+      "縫別駅 ぬいべつえき\n",
+      "糠平駅 ぬかびらえき\n",
+      "糠平ダム仮乗降場 ぬかびらだむかりじょうこうじょう\n",
+      "沼牛駅 ぬまうしえき\n",
+      "沼川駅 ぬまかわえき\n",
+      "沼ノ上駅 ぬまのうええき\n",
+      "根室標津駅 ねむろしべつえき\n",
+      "農場前駅 のうじょうまええき\n",
+      "野塚駅 のつかえき\n",
+      "能取駅 のとろえき\n",
+      "信砂駅 のぶしやえき\n",
+      "登川駅 のぼりかわえき\n",
+      "萩ヶ岡駅 はぎがおかえき\n",
+      "箸別駅 はしべつえき\n",
+      "八幡前駅 はちまんまええき\n",
+      "花石駅 はないしえき\n",
+      "花岡仮乗降場 はなおかかりじょうこうじょう\n",
+      "羽幌駅 はぼろえき\n",
+      "浜佐呂間駅 はまさろまえき\n",
+      "浜床丹仮乗降場 はまとこたんかりじょうこうじょう\n",
+      "浜頓別駅 はまとんべつえき\n",
+      "芭露駅 ばろうえき\n",
+      "芭呂沢駅 ばろうさわえき\n",
+      "班渓駅 ぱんけえき\n",
+      "蟠渓駅 ばんけいえき\n",
+      "晩翠駅 ばんすいえき\n",
+      "盤の沢駅 ばんのさわえき\n",
+      "番屋ノ沢仮乗降場 ばんやのさわかりじょうこうじょう\n",
+      "東鶉駅 ひがしうずらえき\n",
+      "東瓜幕駅 ひがしうりまくえき\n",
+      "東京極駅 ひがしきょうごくえき\n",
+      "東声問駅 ひがしこえといえき\n",
+      "東札幌駅 ひがしさっぽろえき\n",
+      "東美深駅 ひがしびふかえき\n",
+      "飛行場前駅 ひこうじょうまええき\n",
+      "日高岩内駅 ひだかいわないえき\n",
+      "日高町駅 ひだかちょうえき\n",
+      "日高三岡駅 ひだかみつおかえき\n",
+      "日ノ出駅 ひのでえき\n",
+      "美唄炭山駅 びばいたんざんえき\n",
+      "平糸駅 ひらいとえき\n",
+      "美利河駅 ぴりかえき\n",
+      "広尾駅 ひろおえき\n",
+      "広郷駅 ひろさとえき\n",
+      "敏音知駅 ぴんねしりえき\n",
+      "深牛駅 ふかうしえき\n",
+      "布川駅 ふかわえき\n",
+      "蕗ノ台駅 ふきのだいえき\n",
+      "福島仮乗降場 ふくしまかりじょうこうじょう\n",
+      "双葉駅 ふたばえき\n",
+      "二見ヶ岡駅 ふたみがおかえき\n",
+      "二見中央仮乗降場 ふたみちゅうおうかりじょうこうじょう\n",
+      "振老駅 ふらおいえき\n",
+      "振内駅 ふれないえき\n",
+      "分線駅 ぶんせんえき\n",
+      "平和駅 へいわえき\n",
+      "別海駅 べっかいえき\n",
+      "辺渓駅 ぺんけえき\n",
+      "北進駅 ほくしんえき\n",
+      "北斗駅 ほくとえき\n",
+      "北湧駅 ほくゆうえき\n",
+      "北竜駅 ほくりゅうえき\n",
+      "北海鋼機前駅 ほっかいこうきまえ\n",
+      "北興駅 ほっこうえき\n",
+      "北光社駅 ほっこうしゃえき\n",
+      "穂波駅 ほなみえき\n",
+      "穂別駅 ほべつえき\n",
+      "幌加駅 ほろかえき\n",
+      "幌加内駅 ほろかないえき\n",
+      "幌毛志駅 ほろけしえき\n",
+      "幌内駅 ほろないえき\n",
+      "幌内住吉駅 ほろないすみよしえき\n",
+      "幌成駅 ほろなりえき\n",
+      "幌似駅 ほろにえき\n",
+      "本岐駅 ほんきえき\n",
+      "本別駅 ほんべつえき\n",
+      "前田駅 まえだえき\n",
+      "曲淵駅 まがりぶちえき\n",
+      "増毛駅 ましけえき\n",
+      "真澄町駅 ますみちょうえき\n",
+      "松音知駅 まつねしりえき\n",
+      "松前駅 まつまええき\n",
+      "丸松駅 まるまつえき\n",
+      "円山駅 まるやまえき\n",
+      "万字駅 まんじえき\n",
+      "万字炭山駅 まんじたんざんえき\n",
+      "万代町停留場 まんだいちょうていりゅうじょう\n",
+      "三笠駅 みかさえき\n",
+      "御園駅 みそのえき\n",
+      "南雨竜仮乗降場 みなみうりゅうかりじょうこうじょう\n",
+      "南大夕張駅 みなみおおゆうばりえき\n",
+      "南京極駅 みなみきょうごくえき\n",
+      "南新得駅 みなみしんとくえき\n",
+      "南美唄駅 みなみびばいえき\n",
+      "南本別駅 みなみほんべつえき\n",
+      "宮越駅 みやこしえき\n",
+      "宮前町停留場 みやまえちょうていりゅうじょう\n",
+      "美流渡駅 みるとえき\n",
+      "武儀駅 むぎえき\n",
+      "恵野駅 めぐみのえき\n",
+      "目梨泊駅 めなしどまりえき\n",
+      "元沢木仮乗降場 もとさわきかりじょうこうじょう\n",
+      "元西仮乗降場 もとにしかりじょうこうじょう\n",
+      "元紋別駅 もともんべつえき\n",
+      "紅葉橋仮乗降場 もみじばしかりじょうこうじょう\n",
+      "森越駅 もりこしえき\n",
+      "文珠駅 もんじゅえき\n",
+      "紋別駅 もんべつえき\n",
+      "焼山駅 やけやまえき\n",
+      "安別駅 やすべつえき\n",
+      "梁川町停留場 やながわちょうていりゅうじょう\n",
+      "矢文駅 やぶみえき\n",
+      "山臼仮乗降場 やまうすかりじょうこうじょう\n",
+      "山軽駅 やまがるえき\n",
+      "山花駅 やまはなえき\n",
+      "弥生駅 (北海道) やよいえき\n",
+      "和駅 やわらえき\n",
+      "夕製前駅 ゆうせいまええき\n",
+      "勇足駅 ゆうたりえき\n",
+      "雄鎮内仮乗降場 ゆうちんないかりじょうこうじょう\n",
+      "雄鉄昭和駅 ゆうてつしょうわえき\n",
+      "優徳駅 ゆうとくえき\n",
+      "夕張本町駅 ゆうばりほんちょうえき\n",
+      "湧別駅 ゆうべつえき\n",
+      "雄別炭山駅 ゆうべつたんざんえき\n",
+      "幸成駅 ゆきなりえき\n",
+      "湯の里駅 ゆのさとえき\n",
+      "湯ノ岱駅 ゆのたいえき\n",
+      "吉堀駅 よしぼりえき\n",
+      "依田駅 よだえき\n",
+      "力昼駅 りきびるえき\n",
+      "陸別駅 りくべつえき\n",
+      "留産駅 るさんえき\n",
+      "礼受駅 れうけえき\n",
+      "労働会館前停留場 ろうどうかいかんまえていりゅうじょう\n",
+      "六郷駅 ろくごうえき\n",
+      "六興駅 ろっこうえき\n",
+      "若里仮乗降場 わかさとかりじょうこうじょう\n",
+      "若菜駅 わかなえき\n",
+      "若松町停留場 わかまつちょうていりゅうじょう\n",
+      "脇方駅 わきかたえき\n"
+     ]
+    }
+   ],
+   "source": [
+    "for content in contents[8].find_all(\"li\"):\n",
+    "    content = content.text\n",
+    "    sta_name = content[:content.find(\"（\")]\n",
+    "    sta_yomi = content[content.find(\"（\")+1:content.find(\"・\")]\n",
+    "    print(sta_name,sta_yomi)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'論地駅（ろんじえき）'"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "contents[15].find_all(\"li\")[241].text"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -169,7 +891,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.9"
+   "version": "3.9.7"
   },
   "orig_nbformat": 4
  },
